--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
   </head>
+  <link rel="stylesheet" type="text/css" href="static/main.css" />
 
   <body>
+    <p>Hello, world!</p>
   </body>
 </html>
