--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
   </head>
-  <link rel="stylesheet" type="text/css" href="static/main.css" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet"> 
+  <link href="static/main.css" rel="stylesheet" type="text/css" />
 
   <body>
     <p>Hello, world!</p>
