--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link href="static/main.css" rel="stylesheet" type="text/css" />
 
   <body>
-    <p>Hello, world!</p>
+    <div class="container">
+      <p style="font-size: 36px;">svan.dev</p>
+    </div>
   </body>
 </html>
